radware/vijay/27thjunemorninglab/lab1/deployment-bear.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beer-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: beer
  template:
    metadata:
      labels:
        app: beer
    spec:
      containers:
      - name: beer-app
        image: supergiantkir/animals:bear
        ports:
        - containerPort: 8080
