radware/vijay/27thjunemorninglab/lab1/deployment-moose.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moose-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moose
  template:
    metadata:
      labels:
        app: moose 
    spec:
      containers:
      - name: moose-app
        image: supergiantkir/animals:moose
        ports:
        - containerPort: 8080
